# simlab

./: .gitignore  README.md  pyproject.toml
blender/: blender_render.py  look.py  stitch.py
docs/superpowers/plans/: 2026-06-24-xpbd-cloth-pipeline-m0-walking-skeleton.md  2026-06-25-m1a-xpbd-gravity-drape.md  2026-06-25-m1b-distance-bending.md
docs/superpowers/specs/: 2026-06-24-xpbd-cloth-pipeline-design.md  2026-06-25-m1-xpbd-solver-design.md
scripts/: render.py  run_sim.py
src/xpbd/io/: npz_exporter.py  result.py  usd_exporter.py
src/xpbd/scenes/: cloth.py  flag.py  presets.py  wave.py
src/xpbd/solver/: cloth.py  topology.py
tests/: conftest.py  test_constraints.py  test_e2e_m0.py  test_exporters.py  test_flag_scene.py  test_integrator.py  test_render.py  test_result.py  test_run_sim.py  test_scenes.py  test_solver_stability.py  test_taichi_harness.py  test_topology.py
