[project]
name = "xpbd"
version = "0.0.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26",
    "usd-core>=24.0",
    "taichi>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: end-to-end tests that invoke Blender"]
